--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@ body,
 
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 400;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+}
+
 
 body {
   background: lightgrey;
@@ -36,7 +42,9 @@ body {
 
 .button{
   /* align-self: flex-start; */
-  font-family: 'Anton', sans-serif;
+  /* font-family: 'Anton', sans-serif; */
+  font-family: "San Francisco";
+  font-weight: 800;
   font-size: 50px;
   background: rgb(9,62,220);
   background: linear-gradient(0deg, rgba(9,62,220,1) 80%, rgba(126,187,235,1) 100%);
@@ -54,10 +62,10 @@ body {
   justify-content: center;
   align-items: center;
   box-shadow: 0px 0px 0px 0px rgba(126,187,235,1);
-  transition: all 0.5s;
+  transition: all 0.2s;
 }
 .button:hover{
   cursor: pointer;
-  box-shadow: 0px 0px 10px 10px rgba(126,187,235,1);
+  box-shadow: 0px 0px 50px 10px rgba(126,187,235,1);
 }
 
